; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_core.c_device_remove_bin_file.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_core.c_device_remove_bin_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.bin_attribute = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @device_remove_bin_file(%struct.device* %0, %struct.bin_attribute* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.bin_attribute*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.bin_attribute* %1, %struct.bin_attribute** %4, align 8
  %5 = load %struct.device*, %struct.device** %3, align 8
  %6 = icmp ne %struct.device* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.device*, %struct.device** %3, align 8
  %9 = getelementptr inbounds %struct.device, %struct.device* %8, i32 0, i32 0
  %10 = load %struct.bin_attribute*, %struct.bin_attribute** %4, align 8
  %11 = call i32 @sysfs_remove_bin_file(i32* %9, %struct.bin_attribute* %10)
  br label %12

12:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @sysfs_remove_bin_file(i32*, %struct.bin_attribute*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
